Fix overflow on partners

--- a/assets/scss/_c-partners.scss
+++ b/assets/scss/_c-partners.scss
@@ -21,9 +21,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
     @include breakpoint(small only) {
       margin: 0.5rem;
+    }
+
+    .c-partners__link {
+      overflow-x: hidden;
     }
   }
 
